[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/sound_controls.gd" type="Script" id=1]
[ext_resource path="res://Audio/sac2.ogg" type="AudioStream" id=2]
[ext_resource path="res://Audio/click.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/clash01.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/clash02.wav" type="AudioStream" id=5]
[ext_resource path="res://Audio/clash03.wav" type="AudioStream" id=6]
[ext_resource path="res://Audio/clash04.wav" type="AudioStream" id=7]
[ext_resource path="res://Audio/clash05.wav" type="AudioStream" id=8]
[ext_resource path="res://Audio/noo.wav" type="AudioStream" id=9]

[node name="Node" type="Node"]

script = ExtResource( 1 )

[node name="MainTheme" type="AudioStreamPlayer" parent="." index="0"]

stream = ExtResource( 2 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="ClickSound" type="AudioStreamPlayer" parent="." index="1"]

stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="ClashSound01" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="ClashSound02" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 5 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="ClashSound03" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 6 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="ClashSound04" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 7 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="ClashSound05" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 8 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="ClashSoundsTimer" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 0.3
one_shot = false
autostart = false

[node name="NooSound" type="AudioStreamPlayer" parent="." index="8"]

stream = ExtResource( 9 )
volume_db = -8.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="timeout" from="ClashSoundsTimer" to="." method="_on_ClashSoundsTimer_timeout"]


